<resources>
    <string name="app_name">Society</string>
    <string name="back">Back</string>
    <string name="society_quiz">Society Quiz</string>
    <string name="create_by_ai">Tạo bằng AI</string>
    <string name="quiz_icon_desc">Quiz</string>
    <string name="quiz_rate_default">0%%</string>
    <string name="quiz_rate_format">%1$d%%</string>
    <string name="quiz_count_format">%1$d câu</string>
    <string name="quiz_untitled">Không tiêu đề</string>
    <string name="question_title_format">Câu %1$d: %2$s</string>
    <string name="percent_format">%1$d%%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">
23935492977-qj87vsu1o32h0jbo5947dkoejubgqda7.apps.googleusercontent.com
    </string>
    <string name="facebook_app_id">973642669011654</string>
    <string name="fb_login_protocol_scheme">fb973642669011654</string>
    <string name="facebook_client_token">b1001ff4899b69fa408d492e7fa4ed11</string>
    <string name="tag_friends_title">Gắn thẻ bạn bè</string>
    <string name="tag_count_default">0 đã chọn</string>
    <string name="tag_search_hint">Tìm tên bạn bè</string>
    <string name="tag_section_label">BẠN BÈ GỢI Ý</string>
    <string name="tag_done">Xong</string>
</resources>